# solid-couscous

./: CMakeLists.txt  README.md  platformio.ini
.github/workflows/: build.yml  integration-tests.yml  test.yml  unit-tests.yml
boards/: board.h
boards/ecu_sim/: config.h  pins.h
boards/esp32dev/: config.h  pins.h
boards/test/: config.h  pins.h
docs/: fast_divf.md
include/: state_defs.h
integrationtests/: CMakeLists.txt  test_button_state_machine.c  test_main.c  test_runner.py
integrationtests/mocks/button/: button.c  button.h  button_task.c  button_task.h
integrationtests/mocks/core/assert/: assert_handler.h
integrationtests/mocks/core/log/: log.h
integrationtests/mocks/drivers/button/: button.h
integrationtests/mocks/freertos/: FreeRTOS.h  queue.cpp  queue.h  task.cpp  task.h
integrationtests/mocks/state_machine/: state_machine.c  state_machine.h  state_machine_task.c  state_machine_task.h
scripts/: build_esp32dev.sh  ecu.py  objdump.sh  run_native_tests.sh  run_target_tests.sh
src/: CMakeLists.txt  app_init.c  app_init.h  assert_handler.h  button.c  button.h  decode_binary.c  decode_parameters.c  decode_trouble_codes.c  decode_trouble_codes.h  defines.h  get_parameters.c  get_parameters.h  lcd.c  lcd.h  main.c  parameter_addresses.h  parameters.c  parameters.h  process_parameters.c  process_parameters.h  read_from_address.c  read_from_address.h  ssm1.c  ssm1.cpp  ssm1.h  state_machine.c  state_machine.h  uart.c  uart.h
src/core/assert/: assert_handler.c
src/core/include/: assert_handler.h  button_event.h  defines.h  fsm_data.h  fsm_states.h  log.h  parameters.h  timer.h  uart_data.h
src/core/log/: log.c  log.h
src/core/src/: assert_handler.c
src/core/timer/: timer.c
src/drivers/: CMakeLists.txt  drivers_init.c  drivers_init.h
src/drivers/button/: button.c  button.h
src/drivers/i2c/: i2c.c  i2c.h
src/drivers/include/: button.h  button_driver.h  hd44780.h  i2c.h  uart.h
src/drivers/lcd/: hd44780.c  hd44780.h  lcd.c  lcd.h
src/drivers/led/: led.c  led.h
src/drivers/src/: button.c  button_driver.c  hd44780.c  i2c.c  uart.c
src/drivers/uart/: uart.c  uart.h
src/modules/assert/: assert_handler.c
src/modules/button/: CMakeLists.txt  button.c  button.h  button_task.c  button_task.h
src/modules/button/include/: button_task.h
src/modules/button/src/: button.c  button.h  button_task.c
src/modules/decode/: CMakeLists.txt
src/modules/decode/include/: decode_task.h
src/modules/decode/src/: decode_parameters.c  decode_parameters.h  decode_task.c  decode_trouble_codes.c  decode_trouble_codes.h
src/modules/decode/test/: CMakeLists.txt  test_decode_parameters.c  test_decode_trouble_codes.c  test_main.c
src/modules/display/: CMakeLists.txt  display.c  display_task.h
src/modules/display/include/: display_task.h
src/modules/display/src/: display.c  display.h  display_task.c
src/modules/display/test/: CMakeLists.txt  test_display.c  test_main.c
src/modules/ecu/: ssm1.c  ssm1.h
src/modules/fsm/: CMakeLists.txt
src/modules/fsm/include/: fsm_task.h
src/modules/fsm/src/: fsm.c  fsm.h  fsm_task.c
src/modules/fsm/test/: CMakeLists.txt  test_fsm.c  test_main.c
src/modules/lcd/: lcd.c  lcd.h  lcd_task.c  lcd_task.h
src/modules/params/: decode_trouble_codes.c  get_parameters.c  get_parameters.h  parameters.h  process_parameters.c  process_parameters.h
src/modules/state_machine/: state_machine.c  state_machine.h  state_machine_task.c  state_machine_task.h
src/modules/uart/: CMakeLists.txt
src/modules/uart/include/: uart_task.h
src/modules/uart/src/: addr.h  addr_map.c  addr_map.h  ssm1.c  ssm1.h  uart_task.c
src/modules/uart/test/: CMakeLists.txt  test_addr_map.c  test_main.c  test_ssm1.c
test/: CMakeLists.txt
test/modules/test_button/: test_button.c  test_main.c
test/modules/test_ecu/: test_main.c  test_ssm1.c
test/modules/test_lcd/: test_lcd.c  test_main.c
test/test_decode_parameters/: test_main.c
test/test_decode_trouble_codes/: test_main.c
test/test_defines/: test_main.c
test/test_process_parameters/: test_main.c
tools/: ecu_sim.py
